# CPP-CMake-Template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py  pymodule.cpp  pyproject.toml
include/: lib.hpp
libmymod/: CMakeLists.txt
libmymod/include/mymod/: mymod.hpp
libmymod/src/: mymod.cpp
src/: lib.cpp
