[tool.poetry]
name = "pybind-cmake-template"
version = "0.1.0"
description = ""
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
